--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,7 +88,7 @@ bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
 # toggle mouse
-bind m run "if [[ `tmux show-options -g | grep mouse.*on` ]]; then toggle=off; else toggle=on; fi; tmux set -g mouse \$toggle &> /dev/null; tmux display-message \"mouse tmux: \$toggle\"
+bind m run "if [[ `tmux show-options -g | grep mouse.*on` ]]; then toggle=off; else toggle=on; fi; tmux set -g mouse \$toggle &> /dev/null; tmux display-message \"mouse tmux: \$toggle\""
 
 # -- list choice (tmux < 2.4) --------------------------------------------------
 
